# haskell-boiletplate

./: README-BOILERPLATE.md  flake.nix  my-project.cabal
src/Engine/: Main.hs
src/Tui/: Cli.hs
